✨ added first little api with swagger documentation
